--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
   </head>
   <body>
     <h1> Hydrotech Website. Here you'll find some interesting things!!</h1>
-    <img src="images/hydroponic-vegetable-vegetables-growing-greenhouse-cameron-highlands-31448707.jpg" width="600" 
-    height="500" alt="The Firefox logo: a flaming fox surrounding the Earth.">
+    <img src="images/hydroponic-vegetable-vegetables-growing-greenhouse-cameron-highlands-31448707.jpg" alt="The Firefox logo: a flaming fox surrounding the Earth.">
 
-    <p>TTGO, Iot, et</p>
+    <p>Our main topics are Microcontrollers, LoRa, TTGO, IoT and emerging technologies</p>
 
     <ul> <!-- changed to list in the tutorial -->
-      <li>item 1</li>
-      <li>item 2</li>
-      <li>item 3</li>
+      <li>Why this project?</li>
+      <li>What is an NFT crop?</li>
+      <li>What do we propose?</li>
+      <li>Contact us<li>
     </ul>
 
-    <p> My project refers to a virtual radio station. My main aim is develop a website for supporting community to ......</p>
+    <p> </p>
 
     <p>Read more here about my projct <a href="https://www.google.com">Official document</a> Books, music, friends, univertisy are cool!</p>
   </body>
